# weather-app

./: .gitignore  README.md  manage.py  pyproject.toml
app/: __init__.py  app.py
config/: __init__.py  config.py
exceptions/: __init__.py  exceptions.py
templates/: weather.html
thirdapis/geo/: __init__.py  geo.py  test_geo.py
thirdapis/weather/: __init__.py  test_weather.py  weather.py
util/: __init__.py  convert.py  mixin.py
weather/: __init__.py  exceptions.py  geo.py  helper.py  models.py  views.py  weather.py
