[tool.poetry]
name = "weather-app"
version = "0.1"
description = "a simple weather app"
authors = ["lmskey"]
license = "GPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
flask = "^3.0.2"
flask-restplus = "^0.13.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
